--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
 </header><!-- $Promo section-->
 <section class="promo js-jumbo" id="home">
 <h2 class="promo__title">Informal Technical<span>Forum</span></h2>
-<p class="promo__descr">Share - Meet - Collaborate</p>
-<a class="promo__btn" href="#">Learn more</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
+<p class="promo__descr">est 2009</p>
+<a class="promo__btn" href="http://idepbpn-apsm05:8200/km/ITF/Pages/Sesi%20Berikutnya.aspx">Learn more</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
 <!-- $Portfolio section-->
 <section class="portfolio js-portfolio" id="portfolio">
 <div class="portfolio__inner">
@@ -30,28 +30,28 @@
 </ul>
 </nav>
 <ul class="portfolio__content">
-<li class="portfolio__item js-item" data-cat="all flat"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port1.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all flat"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port1.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">Reservoir Modelling and Synthesis </span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
-<li class="portfolio__item js-item" data-cat="all web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port2.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all web"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port2.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">Reservoir Synthesis</span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
-<li class="portfolio__item js-item" data-cat="all graphic"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port3.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all graphic"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port3.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">Reservoir Simulation</span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
-<li class="portfolio__item js-item" data-cat="all graphic web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port4.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all graphic web"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port4.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">Seismic Reservoir Characterization</span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
-<li class="portfolio__item js-item" data-cat="all graphic flat"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port6.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all graphic flat"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port6.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">Seismic Interpretations</span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
-<li class="portfolio__item js-item" data-cat="all web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port5.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all web"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port5.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">Operation Geology</span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
-<li class="portfolio__item js-item" data-cat="all flat web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port1.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all flat web"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port1.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">General Petroleum Exploration</span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
-<li class="portfolio__item js-item" data-cat="all web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port2.png" alt="" /></a>
+<li class="portfolio__item js-item" data-cat="all web"><a href="http://idepbpn-apsm05:8200/km/ITF/Documents/Forms/AllItems.aspx"><img class="portfolio__item-img js-lazy" src="static/images/port2.png" alt="" /></a>
 <div class="portfolio__item-caption"><span class="portfolio__item-title">General Field Development </span><span class="portfolio__item-cat">2G&amp;R </span></div>
 </li>
 </ul>
@@ -60,8 +60,8 @@
 <!-- $Team section-->
 <section class="team" id="team">
 <div class="team__inner">
-<h2 class="team__title">Kuncens</h2>
-<p class="team__descr">Contact us!.</p>
+<h2 class="team__title">The Kuncens</h2>
+<p class="team__descr"> Have any interesting topic to share? Please Contact us! :) </p>
 <div class="team__member"><img src="static/images/ava1.jpg" alt="Lia" />
 <div class="team__member-info">
 <h3 class="team__member-name">Lia</h3>
