--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Home | Design studio template</title><meta name="description" content="Page-specific description"><meta name="keywords" content="Page-specific keywords"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="static/images/favicons/favicon.png" type="image/x-icon"><link rel="apple-touch-icon" href="static/images/favicons/apple-touch-icon.png"><link rel="apple-touch-icon-precomposed" href="static/images/favicons/apple-touch-icon-precomposed.png"><link href="https://fonts.googleapis.com/css?family=Lato:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"><link rel="stylesheet" href="static/css/screen.min.css"><link rel="stylesheet" href="static/css/custom.min.css"></head><body>
-<!-- $Page header--><header class="page-header js-header">
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Home | ITF PHM </title><meta name="description" content="Page-specific description"><meta name="keywords" cic keywords"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="static/images/favicons/favicon.png" type="image/x-icon"><link rel="apple-touch-icon" href="static/images/favicons/apple-touch-icon.png"><link rel="apple-touch-icon-precomposed" href="static/images/favicons/apple-touch-icon-precomposed.png"><link href="https://fonts.googleapis.com/css?family=Lato:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"><link rel="stylesheet" href="static/css/screen.min.css"><link rel="stylesheet" href="static/css/custom.min.css"></head><body>
+<!-- $Page header--><header class="page-header js-header">ontent="Page-specif
 <div class="page-header__inner">
 <div class="page-header__logo">
 <h1>ITF</h1>
-&nbsp;<span>Informal Technical Forum</span></div>
+&nbsp;<span>Pertamina Hulu Mahakam</span></div>
 <nav class="page-header__nav js-nav">
 <ul>
 <li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li>
@@ -15,7 +15,7 @@
 <section class="promo js-jumbo" id="home">
 <h2 class="promo__title">Informal Technical<span>Forum</span></h2>
 <p class="promo__descr">est 2009</p>
-<a class="promo__btn" href="http://idepbpn-apsm05:8200/km/ITF/Pages/Sesi%20Berikutnya.aspx">Learn more</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
+<a class="promo__btn" href="http://idepbpn-apsm05:8200/km/ITF/Pages/Sesi%20Berikutnya.aspx">Next Presentation</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
 <!-- $Portfolio section-->
 <section class="portfolio js-portfolio" id="portfolio">
 <div class="portfolio__inner">
@@ -66,39 +66,39 @@
 <div class="team__member-info">
 <h3 class="team__member-name">Lia</h3>
 <span class="team__member-role">GSR/DEV/TUN</span>
-<p class="team__member-descr">Reservoir Engineer</p>
+<p class="team__member-descr">Reservoir Engineer, OFF - ext: 3299 </p>
 </div>
 <ul class="team__member-soc">
 <li><a class="team__member-icon fb" href="#">My Facebook</a></li>
 <li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
 <li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-<li><a class="team__member-icon db" href="#">I am on Dribble</a></li>
+
 </ul>
 </div>
 <div class="team__member"><img src="static/images/ava2.jpg" alt="Khibran" />
 <div class="team__member-info">
 <h3 class="team__member-name">Khibran</h3>
 <span class="team__member-role"> GSR/DEV/TUN </span>
-<p class="team__member-descr">Geologist</p>
+<p class="team__member-descr">Geologist, OFF - ext: 3299 </p>
 </div>
 <ul class="team__member-soc">
 <li><a class="team__member-icon fb" href="#">My Facebook</a></li>
 <li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
 <li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-<li><a class="team__member-icon db" href="#">I am on Dribble</a></li>
+
 </ul>
 </div>
 <div class="team__member"><img src="static/images/ava3.jpg" alt="Firman BK" />
 <div class="team__member-info">
 <h3 class="team__member-name">Firman BK</h3>
 <span class="team__member-role">GSR/DEV/TUN </span>
-<p class="team__member-descr">Geophysicist</p>
+<p class="team__member-descr">Geophysicist, OFF - ext: 3299 </p>
 </div>
 <ul class="team__member-soc">
 <li><a class="team__member-icon fb" href="#">My Facebook</a></li>
 <li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
 <li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-<li><a class="team__member-icon db" href="#">I am on Dribble</a></li>
+
 </ul>
 </div>
 </div>
