--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 <section class="promo js-jumbo" id="home">
 <h2 class="promo__title">Informal Technical<span>Forum</span></h2>
 <p class="promo__descr">est 2009</p>
-<a class="promo__btn" href="http://idepbpn-apsm05:8200/km/ITF/Pages/Sesi%20Berikutnya.aspx">Next Presentation</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
+<a class="promo__btn" href="http://idepbpn-apsm05:8200/km/ITF/Pages/Sesi%20Berikutnya.aspx">Upcoming ITF</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
 <!-- $Portfolio section-->
 <section class="portfolio js-portfolio" id="portfolio">
 <div class="portfolio__inner">
