--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
 <div class="team__member-info">
 <h3 class="team__member-name">Lia</h3>
 <span class="team__member-role">GSR/DEV/TUN</span>
-<p class="team__member-descr">Reservoir Engineer, OFF - ext: 3299 </p>
+<p class="team__member-descr">Res Engineer, OFF - ext: 3299 </p>
 </div>
 <ul class="team__member-soc">
 <li><a class="team__member-icon fb" href="#">My Facebook</a></li>
