--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
 <section class="team" id="team">
 <div class="team__inner">
 <h2 class="team__title">The Kuncens</h2>
-<p class="team__descr"> Have any interesting topic to share? Please Contact us! :) </p>
+<p class="team__descr"> Have any interesting topic to share? Please contact us! :) </p>
 <div class="team__member"><img src="static/images/ava1.jpg" alt="Lia" />
 <div class="team__member-info">
 <h3 class="team__member-name">Lia</h3>
