--- a/home.html
+++ b/home.html
@@ -2,8 +2,7 @@
 <!-- $Page header--><header class="page-header js-header">
 <div class="page-header__inner">
 <div class="page-header__logo">
-<img src="http://pertamina.com/Media/logo.png" alt="Mountain View">
-<h1>ITF</h1>
+<h1><img src="http://pertamina.com/Media/logo.png" alt="Pertamina"></h1>
 &nbsp;<span>Pertamina Hulu Mahakam</span></div>
 <nav class="page-header__nav js-nav">
 <ul>
