--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <!-- $Page header--><header class="page-header js-header">
 <div class="page-header__inner">
 <div class="page-header__logo">
-<h1><img src="http://pertamina.com/Media/logo.png" alt="Pertamina"></h1>
-&nbsp;<span>Pertamina Hulu Mahakam</span></div>
+<h1>ITF</h1>
+&nbsp;<span><img src="http://pertamina.com/Media/logo.png" alt="Pertamina"></span></div>
 <nav class="page-header__nav js-nav">
 <ul>
 <li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li>
