--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <div class="page-header__inner">
 <div class="page-header__logo">
 <h1>ITF</h1>
-&nbsp;<span><img src="http://pertamina.com/Media/logo.png" alt="Pertamina">style="width:20px;height:20px;"</span></div>
+&nbsp;<span><img src="http://pertamina.com/Media/logo.png" alt="Pertamina" style="width:20px;height:100%;"></span></div>
 <nav class="page-header__nav js-nav">
 <ul>
 <li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li>
