--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <!-- $Page header--><header class="page-header js-header">
 <div class="page-header__inner">
 <div class="page-header__logo">
-<h1><img src="http://pertamina.com/Media/logo.png" alt="Pertamina" style="width:100%;height:40px;"></h1>
+<h1><img src="http://pertamina.com/Media/logo.png" alt="Pertamina" style="width:40px;height:100%;"></h1>
 &nbsp;<span> </span></div>
 <nav class="page-header__nav js-nav">
 <ul>
