--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <!-- $Page header--><header class="page-header js-header">
 <div class="page-header__inner">
 <div class="page-header__logo">
-<h1><img src="http://pertamina.com/Media/logo.png" alt="Pertamina" style="width:120px;height:40px;"></h1>
+<h1><img src="http://pertamina.com/Media/logo.png" alt="Pertamina" style="width:130px;height:40px;"></h1>
 &nbsp;<span> </span></div>
 <nav class="page-header__nav js-nav">
 <ul>
@@ -103,6 +103,6 @@
 </div>
 </div>
 <!-- $Page footer--><footer class="page-footer">
-<div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2018 Aldyth SUKAPRADJA</span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
+<div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
 </footer>
 <script src="static/js/body.min.js"></script>
