--- a/home.html
+++ b/home.html
@@ -103,6 +103,6 @@
 </div>
 </div>
 <!-- $Page footer--><footer class="page-footer">
-<div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
+<div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com] </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
 </footer>
 <script src="static/js/body.min.js"></script>
