--- a/home.html
+++ b/home.html
@@ -56,6 +56,8 @@
 </li>
 </ul>
 </div>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true" width="760" height=100% frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  
 </section>
 <!-- $Team section-->
 <section class="team" id="team">
