--- a/home.html
+++ b/home.html
@@ -18,8 +18,7 @@
 <a class="promo__btn" href="https://datastudio.google.com/embed/u/0/reporting/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq/page/tMxO">Upcoming ITF</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
 <section class="portfolio js-portfolio" id="portfolio">
  <!-- $Portfolio section-->
- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true" width="760" height="800" frameborder="1" marginheight="0" marginwidth="0">Loading...</iframe>
-
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true' width='760' height='500' frameborder='0' marginheight='0' marginwidth='0'>Loading...</iframe></div>
 <div class="portfolio__inner">
 <h2 class="portfolio__title">Topics</h2>
 <p class="portfolio__descr">Past Presentations</p>
