--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
 <nav class="page-header__nav js-nav">
 <ul>
 <li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li>
-<li><a class="page-header__nav-link js-anchor js-link" href="#portfolio">Topics</a></li>
-<li><a class="page-header__nav-link js-anchor js-link" href="#team">Kuncens</a></li>
+<li><a class="page-header__nav-link js-anchor js-link" href="#portfolio">Past ITF</a></li>
+<li><a class="page-header__nav-link js-anchor js-link" href="#team">Registration</a></li>
 </ul>
 </nav></div>
 </header><!-- $Promo section-->
@@ -18,7 +18,6 @@
 <a class="promo__btn" href="https://datastudio.google.com/embed/u/0/reporting/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq/page/tMxO">Upcoming ITF</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
 <section class="portfolio js-portfolio" id="portfolio">
  <!-- $Portfolio section-->
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true' width='760' height='500' frameborder='0' marginheight='0' marginwidth='0'>Loading...</iframe></div>
 <div class="portfolio__inner">
 <h2 class="portfolio__title">Topics</h2>
 <p class="portfolio__descr">Past Presentations</p>
@@ -60,6 +59,8 @@
   
 </section>
 <!-- $Team section-->
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true' width='760' height='500' frameborder='0' marginheight='0' marginwidth='0'>Loading...</iframe></div>
+
 <section class="team" id="team">
 <div class="team__inner">
 <h2 class="team__title">The Kuncens</h2>
