--- a/home.html
+++ b/home.html
@@ -63,8 +63,7 @@
 
 <section class="team" id="team">
 <div class="team__inner">
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true' width='760' height='500' frameborder='0' marginheight='0' marginwidth='0'>Loading...</iframe></div>
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true" width="760" height="1000" frameborder="1" marginheight="1" marginwidth="1">Loading...</iframe>
  <h2 class="team__title">The Kuncens</h2>
 <p class="team__descr"> Have any interesting topic to share? Please contact us! :) </p>
 <div class="team__member"><img src="static/images/ava1.jpg" alt="Lia" />
