--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
 <section class="promo js-jumbo" id="home">
 <h2 class="promo__title">Informal Technical<span>Forum</span></h2>
 <p class="promo__descr">est 2009</p>
-<a class="promo__btn" href="https://datastudio.google.com/embed/u/0/reporting/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq/page/tMxO">Upcoming ITF</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
 <section class="portfolio js-portfolio" id="portfolio">
+<a class="promo__btn" href="https://datastudio.google.com/embed/u/0/reporting/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq/page/tMxO">Upcoming ITF</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
  
  <!-- $Portfolio section-->
 <div class="portfolio__inner">
@@ -63,7 +63,7 @@
 
 <section class="team" id="team">
 <div class="team__inner">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true" width="760" height="1000" frameborder="1" marginheight="1" marginwidth="1">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1G338doAljoehTuZ-Yfso8pq_4BCuipOxz0mcpkltf7GRbQ/viewform?embedded=true" width=100% height="1000" frameborder="1" marginheight="1" marginwidth="1">Loading...</iframe>
 
 <p class="team__descr"> Have any interesting topic to share? Please contact us! :) </p>
 <h2 class="team__title">The Kuncens</h2>
