--- a/home.html
+++ b/home.html
@@ -15,7 +15,9 @@
 <section class="promo js-jumbo" id="home">
 <h2 class="promo__title">Informal Technical<span>Forum</span></h2>
 <p class="promo__descr">est 2009</p>
-<a class="promo__btn" href="https://datastudio.google.com/embed/u/0/reporting/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq/page/tMxO">Upcoming ITF</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section>
+<a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
+<a class="promo__btn" href="https://datastudio.google.com/embed/u/0/reporting/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq/page/tMxO">Upcoming ITF</a>
+ </section>
 <section class="portfolio js-portfolio" id="portfolio">
 
  <!-- $Portfolio section-->
