--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <h2 class="promo__title">Informal Technical<span>Forum</span></h2>
 <p class="promo__descr">est 2009</p>
 <a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
-<a class="promo__btn" href="https://datastudio.google.com/embed/u/0/reporting/1HaaJf5Y7fgitVZ4dW8affHlaFxFLmkUq/page/tMxO">Upcoming ITF</a>
+<a class="promo__btn" href="#">Upcoming ITF</a>
  </section>
 <section class="portfolio js-portfolio" id="portfolio">
 
