--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 <nav class="page-header__nav js-nav">
 <ul>
 <li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li>
-<li><a class="page-header__nav-link js-anchor js-link" href="#portfolio">Past ITF</a></li>
+<li><a class="page-header__nav-link js-anchor js-link" href="#portfolio">ITF Digilibs</a></li>
 <li><a class="page-header__nav-link js-anchor js-link" href="#team">Registration</a></li>
 </ul>
 </nav></div>
