--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
 
 <section class="team" id="team">
 <div class="team__inner">
-<div style="width:195px; text-align:center;" ><iframe  src="https://www.eventbrite.com/countdown-widget?eid=44172030733" frameborder="0" height="349" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:195px; text-align:center;" ><a class="powered-by-eb" style="color: #ADB0B6; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/">Powered by Eventbrite</a></div></div>
+<div style="width:195px; text-align:center;" ><iframe  src="https://www.eventbrite.com/countdown-widget?eid=44172030733" frameborder="0" height="349" width=100% marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:center;" ><a class="powered-by-eb" style="color: #ADB0B6; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/"></a></div></div>
 <p class="team__descr"> Have any interesting topic to share? Please contact us! :) </p>
 <h2 class="team__title">The Kuncens</h2>
 <div class="team__member"><img src="static/images/ava1.jpg" alt="Lia" />
