--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
 <section class="team" id="team">
 <div class="team__inner">
 
-<center> <div style="width:195px; text-align:center;" ><iframe  src="https://www.eventbrite.com/countdown-widget?eid=44172030733" frameborder="0" height="213" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:195px; text-align:center;" ><a class="powered-by-eb" style="color: #ADB0B6; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/">Powered by Eventbrite</a></div></div> </center>
+<center> <div style="width:195px; text-align:center;" ><iframe  src="https://www.eventbrite.com/countdown-widget?eid=44172030733" frameborder="0" height="213" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:195px; text-align:center;" ><a class="powered-by-eb" style="color: #ADB0B6; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/"></a></div></div> </center>
 
 <a href="https://www.eventbrite.com/e/itf-session-10-tickets-44172030733?ref=ebtn" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=44172030733" alt="Eventbrite - ITF Session #10" /></a>
  
