--- a/home.html
+++ b/home.html
@@ -73,50 +73,10 @@
  
 
 <h2 class="team__title">The Kuncens</h2>
-<div class="team__member"><img src="static/images/ava1.jpg" alt="Lia" />
-<div class="team__member-info">
-<h3 class="team__member-name">Lia</h3>
-<span class="team__member-role">GSR/DEV/TUN</span>
-<p class="team__member-descr">Res Engineer, OFF - ext: 3299 </p>
-</div>
-<ul class="team__member-soc">
-<li><a class="team__member-icon fb" href="#">My Facebook</a></li>
-<li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
-<li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-
-</ul>
-</div>
-<div class="team__member"><img src="static/images/ava2.jpg" alt="Khibran" />
-<div class="team__member-info">
-<h3 class="team__member-name">Khibran</h3>
-<span class="team__member-role"> GSR/DEV/TUN </span>
-<p class="team__member-descr">Geologist, OFF - ext: 3299 </p>
-</div>
-<ul class="team__member-soc">
-<li><a class="team__member-icon fb" href="#">My Facebook</a></li>
-<li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
-<li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-
-</ul>
-</div>
-<div class="team__member"><img src="static/images/ava3.jpg" alt="Firman BK" />
-<div class="team__member-info">
-<h3 class="team__member-name">Firman BK</h3>
-<span class="team__member-role">GSR/DEV/TUN </span>
-<p class="team__member-descr">Geophysicist, OFF - ext: 3299 </p>
-</div>
-<ul class="team__member-soc">
-<li><a class="team__member-icon fb" href="#">My Facebook</a></li>
-<li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
-<li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-
-</ul>
-
-</div>
 <p class="team__descr"> Have any interesting topic to share? Please contact us! :) </p> 
 </div>
 
 <!-- $Page footer--><footer class="page-footer">
-<div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com] </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
+<div class="page-footer__inner"><span class="page-footer__copyright">&copy; 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com] </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
 </footer>
 <script src="static/js/body.min.js"></script>
