--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
 <p class="team__descr"> Have any interesting topic to share? Please contact us! :) </p> 
 </div>
 
-<a href="https://www.eventbrite.com/e/itf-session-10-tickets-44172030733?ref=ebtn" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=44172030733" alt="Eventbrite - ITF Session #10" /></a>
+<center> <a href="https://www.eventbrite.com/e/itf-session-10-tickets-44172030733?ref=ebtn" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=44172030733" alt="Eventbrite - ITF Session #10" /></a> </center>
  
 <!-- $Page footer--><footer class="page-footer">
 <div class="page-footer__inner"><span class="page-footer__copyright">&copy; 2018 Aldyth SUKAPRADJA [aldyth.sukapradja@pertamina.com] </span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
