--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       	max-width: 480px;
       	margin: 8% auto 4%;
       	padding: 0 2%;
-      	font-family: Tahoma, Verdana, Arial, sans-serif;
+      	font-family: "Lato",sans-serif;
       	font-size: 45px;
       	line-height: 1;
       	color: #f0f0f0;
@@ -109,7 +109,7 @@
       }
       .project__item{
       	position: relative;
-      	font-family: Georgia, Times, "Times New Roman", serif;
+      	font-family: "Lato",sans-serif;
       	font-size: 25px;
       	line-height: 1;
       	text-align: left;
