--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       	background-position: center center;
       	background-repeat: no-repeat;
       	background-attachment: fixed;
-      	background-image: url('static/images/bg/index_bg.jpg');
+      	background-image: linear-gradient(to top, #732c07, #914333, #aa5e5c, #be7c84, #cf9ca9);;
       }
       .background_blur {
       	filter: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg"><filter id="blur"><feGaussianBlur stdDeviation="5" /></filter></svg>#blur');
